openshift/components/frontend/base/svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: alcs-web
spec:
  ports:
  - name: web
    port: 8081
    targetPort: 8081
  selector:
    component: alcs-web
