openshift/components/frontend/base/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: alcs-web
spec:
  to:
    kind: Service
    name: alcs-web
  port:
    targetPort: web
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
